# pitch-critic

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  EVOLUTION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: analyze_with_mock.py  extract_pdf_demo.py  score_comparison.py
src/pitchcritic/: __init__.py  api.py  app.py  critic.py  extractor.py  llm.py  scorer.py
tests/: conftest.py  test_api.py  test_app.py  test_critic.py  test_error_handling.py  test_extractor.py  test_llm.py  test_properties.py  test_scorer.py
