[project]
name = "pitchcritic"
version = "0.1.0"
description = "Upload your pitch deck, get it destroyed."
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.10",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "reportlab>=4.1",
    "ruff>=0.3",
]

[project.scripts]
pitchcritic = "pitchcritic.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitchcritic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
